Die verwendete Postgres Version festlegen statt latest zu verwenden, Kleine Fixes aus Code analyse